--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
             <div class="row">
                 <fieldset class="input-field">
                     <label for="email">Email</label>
-                    <input type="email" id="email">
+                    <input type="email" id="email" placeholder="thor@asgard.no">
                 </fieldset>
 
                 <fieldset class="input-field">
                     <label for="phone-number">Phone number</label>
-                    <input type="tel" id="phone-number">
+                    <input type="tel" id="phone-number" placeholder="+47 324 243 432">
                 </fieldset>
             </div>
 
             <div class="row">
                 <fieldset class="input-field">
                     <label for="pwd">Password</label>
-                    <input type="password" id="pwd">
+                    <input type="password" id="pwd" required>
                 </fieldset>
 
                 <fieldset class="input-field">
                     <label for="confirm-pwd">Confirm password</label>
-                    <input type="password" id="confirm-pwd">
+                    <input type="password" id="confirm-pwd" required>
                 </fieldset>
             </div>
         </form>
 
         <div id="button-and-txt">
             <button type="submit">Create Account</button>
-            <span>Already have an account? <strong>Log in</strong></span>
+            <span>Already have an account? <strong style="color: #2F5D29;">Log in</strong></span>
         </div>
         </div>
     </div>
